Enable grafana persistance

--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -305,4 +305,9 @@ spec:
         - hosts:
           - *host
     persistence:
-      enabled: false
+      type: pvc
+      enabled: true
+      storageClassName: longhorn-fast
+      accessModes:
+        - ReadWriteOnce
+      size: 1Gi
