--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
               "--exclude-category", "music.import",
               "--exclude-category", "overlord",
               # "--include-tag", "expired", # defined in config.yaml
-              "--include-tag", "added:24h",
+              "--include-tag", "added:7d",
               # "--dry-run",
               "--server", "qbittorrent.media.svc.cluster.local",
               "--port", "8049"
