--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -157,13 +157,13 @@ ffmpeg:
   hwaccel_args: preset-nvidia-h264
   # hwaccel_args: ["-vaapi_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
   # Optional: global input args (default: shown below)
-  input_args: preset-rtsp-restream-low-latency
+  input_args: preset-rtsp-generic
   # Optional: global output args
   output_args:
     # Optional: output args for detect streams (default: shown below)
     detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
     # Optional: output args for record streams (default: shown below)
-    record: preset-record-generic-audio-copy
+    record: preset-record-generic-audio-aac
     # Optional: output args for rtmp streams (default: shown below)
     # rtmp: preset-rtmp-generic
   # Optional: Time in seconds to wait before ffmpeg retries connecting to the camera. (default: shown below)
@@ -397,18 +397,18 @@ rtmp:
 
 # Optional: Restream configuration
 # Uses https://github.com/AlexxIT/go2rtc (v1.8.3)
-go2rtc:
-  streams:
-    gates_hq:
-      - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#video=copy#audio=aac#hardware"
-    gates_lq:
-      - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#video=copy#audio=aac#hardware"
-  webrtc:
-    candidates:
-      - 192.168.108.55:8555
-      - stun:8555
+# go2rtc:
+#   streams:
+#     gates_hq:
+#       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
+#       - "ffmpeg:gates_hq#video=copy#audio=aac"
+#     gates_lq:
+#       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
+#       - "ffmpeg:gates_lq#video=copy#audio=aac"
+#   webrtc:
+#     candidates:
+#       - 192.168.108.55:8555
+#       - stun:8555
 
 # Optional: jsmpeg stream configuration for WebUI
 live:
@@ -461,12 +461,14 @@ cameras:
       inputs:
         # Required: the path to the stream
         # NOTE: path may include environment variables or docker secrets, which must begin with 'FRIGATE_' and be referenced in {}
-        - path: rtsp://localhost:8554/gates_hq
+        - path: rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
+        # - path: rtsp://localhost:8554/gates_hq
           # input_args: preset-rtsp-restream
           roles:
             - record
             - audio
-        - path: rtsp://localhost:8554/gates_lq
+        - path: rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
+        # - path: rtsp://localhost:8554/gates_lq
           # input_args: preset-rtsp-restream
           roles:
             - detect
@@ -529,7 +531,7 @@ cameras:
           - bus
       guests:
         coordinates: 495,189,469,143,348,239,369,303
-        inertia: 56
+        inertia: 70
         objects:
           - person
 
