--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -98,8 +98,8 @@ spec:
         ruler:
           enable_api: true
           enable_alertmanager_v2: true
-          alertmanager_url: http://alertmanager-operated.observability.svc.cluster.local:9093
-          # alertmanager_url: http://vmalertmanager-victoria-metrics.observability.svc.cluster.local:9093
+          # alertmanager_url: http://alertmanager-operated.observability.svc.cluster.local:9093
+          alertmanager_url: http://vmalertmanager-victoria-metrics.observability.svc.cluster.local:9093
           storage:
             type: local
             local:
@@ -176,10 +176,17 @@ spec:
           emptyDir: {}
     monitoring:
       dashboards:
+        enabled: true
+        namespace: observability
         annotations:
           grafana_folder: Loki
+      rules:
+        enabled: true
+        alerting: true
+        namespace: observability
       serviceMonitor:
-        enabled: false
+        enabled: true
+        interval: 15s
         metricsInstance:
           enabled: false
       selfMonitoring:
