--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -131,6 +131,7 @@ spec:
       replicas: 1
       image:
         registry: ghcr.io
+      affinity: {}
       ingress:
         enabled: true
         ingressClassName: internal
