--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -131,7 +131,7 @@ spec:
       replicas: 1
       image:
         registry: ghcr.io
-      affinity: {}
+      affinity: null
       ingress:
         enabled: true
         ingressClassName: internal
