--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -250,7 +250,7 @@ spec:
             uid: prometheus
             access: proxy
             # url: http://thanos-query-frontend.monitoring.svc.cluster.local:9090
-            url: http://vmalertmanager-victoria-metrics.observability.svc.cluster.local:8481/select/0/prometheus
+            url: http://vmselect-victoria-metrics.observability.svc:8481/select/0/prometheus
             jsonData:
               prometheusType: Thanos # Prometheus for victoria-metrics
             isDefault: true
