--- a/kubernetes/apps/storage/minio/operator/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/operator/helmrelease.yaml
@@ -31,6 +31,8 @@ spec:
           value: "observability"
         - name: MINIO_PROMETHEUS_URL
           value: "http://vmselect-victoria-metrics.observability.svc:8481/select/0/prometheus"
+        - name: MINIO_PROMETHEUS_AUTH_TYPE
+          value: public
       imagePullSecrets: [ ]
       runtimeClassName: ~
       initContainers: [ ]
