--- a/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
@@ -13,7 +13,7 @@ stringData:
       metrics_path: /minio/v2/metrics/cluster
       scheme: https
       static_configs:
-      - targets: [minio.observability.svc]
+      - targets: [minio.observability.svc.cluster.local]
 
     - job_name: smtp-relay
       scrape_interval: 1m
