--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -154,7 +154,7 @@ ffmpeg:
   global_args: -hide_banner -loglevel warning -threads 2
   # Optional: global hwaccel args (default: shown below)
   # NOTE: See hardware acceleration docs for your specific device
-  hwaccel_args: preset-nvidia-h264
+  hwaccel_args: preset-nvidia-h265
   # hwaccel_args: ["-vaapi_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
   # Optional: global input args (default: shown below)
   input_args: preset-rtsp-generic
@@ -401,10 +401,10 @@ go2rtc:
   streams:
     gates_hq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#video=copy#audio=aac"
+      - "ffmpeg:gates_hq#video=h264#audio=aac#hardware"
     gates_lq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#video=copy#audio=aac"
+      - "ffmpeg:gates_lq#video=h264#audio=aac#hardware"
   webrtc:
     candidates:
       - 192.168.108.55:8555
