--- a/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/scrapes/extrascrapes.yaml
@@ -12,6 +12,8 @@ stringData:
       bearer_token: eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJwcm9tZXRoZXVzIiwic3ViIjoidmFuaG9sZGVyIiwiZXhwIjo0ODY0NTYyMzQ5fQ.X5ry1iWrzf4WvodEGODS6k2Ok1VR1Ra6HLqWqzZALGNpZQfdZUzhgMh5cOvPu5bkK1Gbb8FLbJXqeYdNI9GLSQ
       metrics_path: /minio/v2/metrics/cluster
       scheme: https
+      tls_config:
+        insecure_skip_verify: true
       static_configs:
       - targets: [minio.storage.svc.cluster.local]
 
