--- a/kubernetes/apps/observability/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/observability/grafana/app/secret.sops.yaml
@@ -5,6 +5,12 @@ metadata:
 stringData:
     GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:jj+VjHN4O+hKEG43eoV/ZMz7OwULOStzwKkPUL4+NUw2h7omq0Za3A==,iv:J/5owVEmH4RMP9J5r60MtdiLXc1+Z83iFF1y3uznumA=,tag:jCeFqX4lJzaKU+CZ5+qGMw==,type:str]
     GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:PxqBrjlEWv+GdeaxJZzuwKCESXY2NbHt5JSQyfk/OW57SkGlxtlRSXU6X13ucn0/vj5mRdb4a/g7W8MqK9yvDqfBXyjeIfDEVrk/r+djcmfGDxDOQgYMnw8h1L6A46j1RYIZr7dQjPWQ1j+ZxQEKoiceiS5vW7ig5U9PG2zUTGc=,iv:9AOQ5rTy5g69H+6c0mTEUFacf2lJgUegODJ+0Y9t2MQ=,tag:Ji41gdsFUCSWMgY+rVuG1g==,type:str]
+    GF_DATE_FORMATS_USE_BROWSER_LOCALE: ENC[AES256_GCM,data:lM1cXA==,iv:UVO/kGK900l4gnayYLIZ5l1FagXPjGuZL38Qb7ZFDiY=,tag:DLZqkRTziAsLyIRYTAfSUQ==,type:bool]
+    GF_EXPLORE_ENABLED: ENC[AES256_GCM,data:Q+FmIA==,iv:luEkWT+hTvkwP3N2L3fDU1gRnAPUiy0jnTew4W1Vvlk=,tag:AAgK+i17t5jmCnJfWa5BFg==,type:bool]
+    GF_FEATURE_TOGGLES_ENABLE: ENC[AES256_GCM,data:XdPlyEJVrwyCj19oDQUbfg==,iv:apzxBCnBWqx8bWTbBJ6vKGAFbMRjTdGgfNDrVz2nGIg=,tag:GMvMPKBKjUHpNAL49/oE1Q==,type:str]
+    GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: ENC[AES256_GCM,data:CJ35CK9t05GSrt/kKBLhDZ4LGea/esRyXzMEH2lKhne5xIE/gpX6W6wlXQFhsZteF1lQIcbNFpRFMhKi,iv:FA4RQqI9y/fY2vaC3nt9TqTCVq4UtiSqNT4TeQZV+Ys=,tag:UqRSbAq3gGEAPyKoWiWYKw==,type:str]
+    GF_SECURITY_ANGULAR_SUPPORT_ENABLED: ENC[AES256_GCM,data:qICNeA==,iv:IKjDhewfbVMfPEqNSYggofA0O+oGvMcCNMcQz2l7q+0=,tag:UMBIA/vgco18UAxNf7nqfw==,type:bool]
+    GF_SECURITY_COOKIE_SAMESITE: ENC[AES256_GCM,data:Y3aBFUdqlQ==,iv:oYxmxWZ3LdwZ4R1M65DcmuH+6P8vneXzGqcNQIs+znY=,tag:1Yp7FItNsW9t1Qid4mfbyw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +26,8 @@ sops:
             NU15VzY4MHAwY3RrQVlzek8rZ1ZiSnMKKhkqEffab3oJGYPB6OMMQN5yTGXzLGrn
             llhm03KOzE1UsHv2k+C8UDar+40L/3bsZkkBIs55VaZ0ge3yVDAIRg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-12T19:29:15Z"
-    mac: ENC[AES256_GCM,data:F1V4XcQlm3+KrswIu1oQ5tTknMBUykHzBAqPRtbQmonsXlTh1c+0dRSPWZqLrzL09d09AGaqrMDi1IN/l5f7GH8TtBYoMJTveY92gGU53aZ5gW/24YwYxSK2Gi2w9BQqhm6mxw03JNb6eYcIccTajFsJ21HQOCpVzvYTffFgSjs=,iv:Isbfa9jIVNJuv9Si+zhebk8YxWIkKInt0hpSepyp1MA=,tag:rsHyLAoDEPK+K4aW+zaxHg==,type:str]
+    lastmodified: "2024-03-21T20:23:24Z"
+    mac: ENC[AES256_GCM,data:LcJUuCQeE2Erarli4ThR0BVD0bDnaBHgZ36M6bcgyz5wm6a8TPhxhvY75IHZChDhFHYoOzs4YjRNbaAzaH2ZHwE6sKcNPlakOD8jH+s/zOnsrqWSELM6I930cuQnHxQ68fvGhHzw41Ch7pXBNztckLuQEOgj+v7FjGbLp6itOqo=,iv:F3haQgbhsYVCyQOnu2EWx6ekDj2lkvG7DTAxWD7Vxpc=,tag:mil4AS49OV/+dNmge2me9Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
