--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -341,6 +341,8 @@ spec:
         groups_attribute_path: groups
         name_attribute_path: name
         role_attribute_path: contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'
+      auth.anonymous:
+        enabled: false
       news:
         news_feed_enabled: false
       plugins:
@@ -352,7 +354,7 @@ spec:
         searchNamespace: ALL
         labelValue: ""
         label: grafana_dashboard
-        folderAnnotation: grafana_folder
+        # folderAnnotation: grafana_folder
         provider:
           disableDelete: true
           foldersFromFilesStructure: true
