--- a/kubernetes/apps/observability/robusta/ks.yaml
+++ b/kubernetes/apps/observability/robusta/ks.yaml
@@ -21,7 +21,7 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
-  postBuild:
-      substituteFrom:
-        - kind: Secret
-          name: robusta
+  # postBuild:
+  #   substituteFrom:
+  #     - kind: Secret
+  #       name: robusta
