--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -9,3 +9,5 @@ resources:
   - ./scrapes/servicescrape.yaml
   - ./rules/oom.yaml
   - ./rules/victoria.yaml
+  - ./rules/default-alerts.yaml
+  - ./rules/default-rules.yaml
