--- a/kubernetes/apps/observability/grafana/dashboards/kustomization.yaml
+++ b/kubernetes/apps/observability/grafana/dashboards/kustomization.yaml
@@ -7,6 +7,23 @@ configMapGenerator:
     files:
       - speedtest.json=speedtest.json
       - cnpg.json=cnpg.json
+      - apiserver.json=apiserver.json
+      - cluster-total.json=cluster-total.json
+      - controller-manager.json=controller-manager.json
+      - k8s-resources-cluster.json=k8s-resources-cluster.json
+      - k8s-resources-namespace.json=k8s-resources-namespace.json
+      - k8s-resources-node.json=k8s-resources-node.json
+      - k8s-resources-pod.json=k8s-resources-pod.json
+      - k8s-resources-workload.json=k8s-resources-workload.json
+      - k8s-resources-workloads-namespace.json=k8s-resources-workloads-namespace.json
+      - kubelet.json=kubelet.json
+      - namespace-by-pod.json=namespace-by-pod.json
+      - namespace-by-workload.json=namespace-by-workload.json
+      - persistentvolumesusage.json=persistentvolumesusage.json
+      - pod-total.json=pod-total.json
+      - proxy.json=proxy.json
+      - scheduler.json=scheduler.json
+      - workload-total.json=workload-total.json
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
