--- a/kubernetes/apps/observability/grafana/dashboards/kustomization.yaml
+++ b/kubernetes/apps/observability/grafana/dashboards/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
 configMapGenerator:
-  - name: custom-dashboards
+  - name: custom-dashboards-01
     files:
       - speedtest.json=speedtest.json
       - cnpg.json=cnpg.json
@@ -14,6 +14,19 @@ configMapGenerator:
       - k8s-resources-namespace.json=k8s-resources-namespace.json
       - k8s-resources-node.json=k8s-resources-node.json
       - k8s-resources-pod.json=k8s-resources-pod.json
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
+  labels:
+    grafana_dashboard: "true"
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+namespace: observability
+configMapGenerator:
+  - name: custom-dashboards-02
+    files:
       - k8s-resources-workload.json=k8s-resources-workload.json
       - k8s-resources-workloads-namespace.json=k8s-resources-workloads-namespace.json
       - kubelet.json=kubelet.json
