--- a/kubernetes/apps/network/samba/ks.yaml
+++ b/kubernetes/apps/network/samba/ks.yaml
@@ -2,19 +2,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app samba
+  name: &app samba-operator
   namespace: flux-system
 spec:
   targetNamespace: network
   commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
-  path: ./kubernetes/apps/network/samba/app
-  prune: true
+  labels:
+    app.kubernetes.io/name: *app
   sourceRef:
     kind: GitRepository
-    name: home-kubernetes
+    name: samba
   wait: false
+  path: "./config/default"
+  prune: true
   interval: 30m
   retryInterval: 1m
-  timeout: 5m
+  timeout: 15m
