--- a/kubernetes/apps/storage/kustomization.yaml
+++ b/kubernetes/apps/storage/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - ./namespace.yaml
   - ./longhorn/ks.yaml
   - ./minio/ks.yaml
+  - ./samba-operator/ks.yaml
+  - ./samba-share/ks.yaml
