--- a/kubernetes/apps/storage/samba-share/ks.yaml
+++ b/kubernetes/apps/storage/samba-share/ks.yaml
@@ -2,19 +2,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app samba-operator
+  name: &app samba-share
   namespace: flux-system
 spec:
-  targetNamespace: network
+  targetNamespace: storage
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  path: ./kubernetes/apps/storage/samba-share/app
+  prune: true
   sourceRef:
     kind: GitRepository
-    name: samba
+    name: home-kubernetes
   wait: false
-  path: "./config/default"
-  prune: true
   interval: 30m
   retryInterval: 1m
-  timeout: 15m
+  timeout: 5m
